--- a/POS/static/ngTemplates/app.POS.product.item.html
+++ b/POS/static/ngTemplates/app.POS.product.item.html
@@ -1,6 +1,6 @@
 
-<div class="col-md-6">
-  <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-bottom: 25px;">
+<div class="col-md-6" >
+  <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-bottom: 25px;height:100px">
     <div class="row" syle="padding: 7px;" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
       <div class="col-md-2" style="padding-right:0px;">
         <img ng-src="{{data.displayPicture}}" style="width: 100%;">
