--- a/support/static/ngTemplates/app.reviews.explore.html
+++ b/support/static/ngTemplates/app.reviews.explore.html
@@ -1,5 +1,6 @@
 <div ng-controller="businessManagement.reviews.explore" style="padding-top:20px;">
   <div class="col-md-12">
+    <h3><strong>Date : </strong>{{msgData[0].created | date : 'dd-MMM-yyyy'}}</h3><hr>
     <div class="row" ng-repeat="msg in msgData">
       <!-- <h3>{{msg.message}}</h3> -->
       <div style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
