--- a/support/static/ngTemplates/app.reviews.items.html
+++ b/support/static/ngTemplates/app.reviews.items.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row container-fluid" style="padding-top:10px;height:50px;">
       <div class="col-md-12">
-        <h4>Date: {{data.created | date : 'dd-MMM-yyyy hh:mm:a'}}
+        <h4>Date: {{data.created | date : 'dd-MMM-yyyy'}}
           <span class="pull-right" style="cursor:pointer;"><i class="fa fa-info-circle fa-lg" ng-click="rowActionClicked('info')"></i></span>
         </h4>
       </div>
