--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -102,10 +102,25 @@
         <i class="fa fa-ticket"></i> &nbsp; <label>Ticket</label> &nbsp;<input type="checkbox" ng-model="cpForm.ticket">
       </div>
       <div class="form-group">
-        <i class="fa fa-user"></i> &nbsp; <label>Name</label> &nbsp;<input type="text" ng-model="cpForm.name">
+        <div class="row">
+          <div class="col-md-2">
+            <i class="fa fa-user"></i> &nbsp; <label>Name</label>
+          </div>
+          <div class="col-md-4">
+            <input class="form-control" type="text" ng-model="cpForm.name">
+          </div>
+        </div>
       </div>
       <div class="form-group">
-        <i class="fa fa-user"></i> &nbsp; <label>Picture</label> &nbsp;<input type="file" ng-model="cpForm.dp">
+        <div class="row">
+          <!-- {{cpForm}} -->
+          <div class="col-md-2">
+            <i class="fa fa-user"></i> &nbsp; <label>Picture</label>
+          </div>
+          <div class="col-md-4">
+            <input type="file" file-model="cpForm.dp">
+          </div>
+        </div>
       </div>
     </div><br>
     <button type="button" class="btn btn-primary btn-lg col-md-2 col-md-offset-5" ng-click="saveCustomerProfile()">Save</button>
