--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -77,10 +77,11 @@
         </div><br>
         <div class="row" ng-if="custDetails.dp" style="padding-left:10px">
           <div class="col-md-5">
-            <h4><i class="fa fa-desktop"></i> &nbsp; Picture </h4>
+            <h4><i class="fa fa-user"></i> &nbsp; Picture </h4>
           </div>
           <div class="col-md-2">
-            <h4> <img src="custDetails.dp" alt="">  </h4>
+            <!-- {{custDetails.dp}} -->
+            <h4> <img src="{{custDetails.dp}}" width="100px" alt="">  </h4>
           </div>
         </div><br>
       </div>
