--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="col-md-8 col-md-offset-1 card bg-white">
-    <div class="row" style="margin:20px 0px 30px 0px">
+    <div class="row" style="margin:0px 0px 30px 0px">
 
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb" style="margin-left:-15px;margin-right:-15px">
@@ -122,10 +122,10 @@
 
         </div>
         <hr>
-        <div class="row bg-blue text-center" style="margin:0px;margin-top:20px;">
+        <div class="row bg-blue text-center" style="margin:0px;margin-top:20px;" ng-if="showRatings">
           <h5 style="color:white;">Ratings and Review</h5>
         </div>
-        <div class="row">
+        <div class="row" ng-if="showRatings">
           <div class="col-md-4 hidden-sm hidden-xs" style="padding-top:20px;">
             <div class="col-md-5 hidden-sm hidden-xs text-center">
               <span  ng-if="details.rating.rating__avg==none">None</span> <br>
@@ -164,7 +164,7 @@
           </div>
 
         </div>
-        <div class="row">
+        <div class="row" ng-if="showRatings">
           <div class="col-sm-12 col-xs-12  hidden-md hidden-lg">
             <div class="col-sm-6 col-xs-6  hidden-md hidden-lg text-center">
               <span  ng-if="details.rating.rating__avg==none">None</span> <br>
@@ -205,9 +205,9 @@
             </div>
           </div>
 
+          <hr >
         </div>
-        <hr >
-        <div class="row text-center" ng-if="me != null&&reviews.length==0">
+        <div class="row text-center" ng-if="me != null&&reviews.length==0&&showRatings">
           <!-- <h4>No reviews yet. Be the first to review</h4> -->
             <h4>Write a review</h4>
         </div>
@@ -256,16 +256,15 @@
         </div>
       </div>
     </div>
-    <!-- <div class="row" style="margin:0px;" ng-if="me != null">
-      <div class="col-md-offset-1 col-md-10 hidden-xs hidden-sm" style="padding:40px; padding-top:0px;">
-        <div style="padding:10px;width:100%" class="row card bg-white">
+    <div class="row" style="margin:0px;" ng-if="me != null">
+      <div class=" col-md-10 hidden-xs hidden-sm" style="padding:40px; padding-top:0px;width:100%">
           <h4>Suggested Products</h4>
           <div ng-repeat="r in suggest" style="padding:0px;">
             <div class="col-md-3 anim-in-out anim-zoom-out">
-              <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
+              <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.pk,name:r.product.name.split(' ').join('-')})">
                 <div class="row">
                     <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-                  <img style="width: 80%; height:200px;" class="img" ng-src="{{r.files[0].ttachment}}" ng-if="r.files.length>0">
+                  <img style="width: 80%; height:200px;" class="img" ng-src="{{r.files[0].attachment}}" ng-if="r.files.length>0">
                   <img style="width: 80%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.files==null">
                 </div>
               </div>
@@ -274,67 +273,62 @@
                   <h5 ng-if="r.product.name.length<=35" style="margin:0px;  height:60px;">{{r.product.name}}</h5>
                   <span style="font-size:15px;"> Price : </span>
 
-                  <span  style="font-size:15px; padding-left:10px; ">{{r.product.price}}
-                    <span ng-if="r.product.product.discount>0" class="text-muted" >
+                  <span  style="font-size:15px; padding-left:10px; ">
+                    <span ng-if="r.product.discount>0" class="text-muted" >
                       <strike><i class="fa fa-inr"></i>{{r.product.price}}</strike>
                     </span>
-                    <span ng-if="r.product.product.discount==0" >
-                    <i class="fa fa-inr"></i>{{r.product..price}}
+                    <span ng-if="r.product.discount==0" >
+                    <i class="fa fa-inr"></i>{{r.product.price}}
                     </span>
                   </span>
 
-                  <span ng-if="r.product.product.discount>0"  style="font-size:15px;">
+                  <span ng-if="r.product.discount>0"  style="font-size:15px;">
                   <i class="fa fa-inr"></i>{{r.product.discountedPrice.toFixed(2)}}
                   </span>
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
 
 
       <div class="col-xs-12 hidden-md hidden-lg" style="padding:40px; padding-top:0px;">
         <div style="padding:10px;" class="row card bg-white">
-          <h4>Suggested Products</h4>{{suggest}}
+          <h4>Suggested Products</h4>
           <div ng-repeat="r in suggest" style="padding:0px;">
             <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out">
-              <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
+              <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.pk,name:r.product.name.split(' ').join('-')})">
                 <div class="row">
                     <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-                  <img style="width:50%;height:200px;" class="img" ng-src="{{r.product.files[0].attachment}}" ng-if="r.product.files.length>0">
-                  <img style="width:50%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.product.files==null">
+                  <img style="width:50%;height:200px;" class="img" ng-src="{{r.files[0].attachment}}" ng-if="r.files.length>0">
+                  <img style="width:50%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.files==null">
                 </div>
                 </div>
                 <div class="row container-fluid" style="padding-top:5px; padding-bottom:20px;">
-                  <h5 ng-if="r.product.product.name.length>35" style="margin:0px;  height:40px;">{{r.product.product.name.slice(0,35)}}...</h5>
-                  <h5 ng-if="r.product.product.name.length<=35" style="margin:0px;  height:40px;">{{r.product.product.name}}</h5>
+                  <h5 ng-if="r.product.name.length>35" style="margin:0px;  height:40px;">{{r.product.name.slice(0,35)}}...</h5>
+                  <h5 ng-if="r.product.name.length<=35" style="margin:0px;  height:40px;">{{r.product.name}}</h5>
                   <span style="font-size:15px;"> Price : </span>
 
                   <span class="pull-right" style="font-size:15px; padding-left:10px; ">
-                    <span ng-if="r.product.product.discount>0" class="text-muted" >
-                      <strike><i class="fa fa-inr"></i>{{r.product.product.price}}</strike>
+                    <span ng-if="r.product.discount>0" class="text-muted" >
+                      <strike><i class="fa fa-inr"></i>{{r.product.price}}</strike>
                     </span>
-                    <span ng-if="r.product.product.discount==0" >
-                    <i class="fa fa-inr"></i>{{r.product.product.price}}
+                    <span ng-if="r.product.discount==0" >
+                    <i class="fa fa-inr"></i>{{r.product.price}}
                     </span>
                   </span>
 
-                  <span ng-if="r.product.product.discount>0" class="pull-right" style="font-size:15px;">
+                  <span ng-if="r.product.discount>0" class="pull-right" style="font-size:15px;">
                   <i class="fa fa-inr"></i>{{r.product.product.discountedPrice.toFixed(2)}}
                   </span>
-
+                </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-
-
-
-    </div> -->
-  </div>
+    </div>
 
   <div class="col-md-2 hidden-xs hidden-sm" style="margin-left:15px; position:sticky; top:10px; " ng-if="me != null">
     <h4>Recently Viewed</h4>
@@ -366,8 +360,9 @@
         </div>
     </div>
   </div>
-
 </div>
+
+
 
 <div class="row anim-in-out anim-zoom-out" style="position:fixed; bottom:20px; left:0px;z-index:100;" ng-if="showGoToTop">
   <div class="card text-center" style="width:300px;height:70px;padding:10px;background-color:#0e7560;border-radius:0px 10px 10px 0px;">
