--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -72,7 +72,7 @@
 
 
 
-<div ng-if="$state.is('ecommerce')" style="position:relative;height:400px;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;background-size:cover;" class="card hidden-xs hidden-sm">
+<div ng-if="$state.is('ecommerce')" style="position:relative;height:auto;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;background-size:cover;" class="card hidden-xs hidden-sm">
   <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer" ng-if="$index == slide.active" ng-repeat="b in slide.banners" ng-src="{{b.image}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/>
   <div class="row" style="background-color:#525252;position:absolute;bottom:0px;width:100%; height:40px;margin:0px;">
     <ul style="padding:0px;">
@@ -86,7 +86,7 @@
 </div>
 
 
-<div ng-if="$state.is('ecommerce')" style="position:relative;height:72vh ;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
+<div ng-if="$state.is('ecommerce')" style="position:relative;height:auto;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
   <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer" ng-if="$index == slideMobile.active" ng-repeat="b in slideMobile.banners" ng-src="{{b.imagePortrait}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/>
 
 <!-- <div ng-if="$state.is('ecommerce')" style="position:relative;height:88vh ;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
