--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.product.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.product.item.html
@@ -7,9 +7,16 @@
       <strong>Minimum Cost : </strong> {{data.minCost}}<br>
       <strong>Total Fields : </strong> {{data.fields.length }}<br>
     </div>
-    <div class="row" style="margin:10px 15px;margin-bottom:5px">
+    <div class="row" >
+      <div class="col-md-4 text-center">
       <i class="fa fa-pencil fa-lg" style="cursor:pointer" ng-click="rowActionClicked('edit',data)"></i>
-      <i class="fa fa-info fa-lg pull-right" style="cursor:pointer" ng-click="rowActionClicked('info')"></i>
+    </div>
+    <div class="col-md-4  text-center">
+      <i class="fa fa-trash fa-lg" style="cursor:pointer" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default"></i>
+    </div>
+    <div class="col-md-4 text-center">
+      <i class="fa fa-info fa-lg " style="cursor:pointer" ng-click="rowActionClicked('info')"></i>
+    </div>
     </div>
   </div>
 </div>
