--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -77,10 +77,9 @@
         </div><br>
         <div class="row" ng-if="custDetails.dp" style="padding-left:10px">
           <div class="col-md-5">
-            <h4><i class="fa fa-user"></i> &nbsp; Picture </h4>
+            <h4><i class="fa  fa-picture-o"></i> &nbsp; Picture </h4>
           </div>
           <div class="col-md-2">
-            <!-- {{custDetails.dp}} -->
             <h4> <img src="{{custDetails.dp}}" width="100px" alt="">  </h4>
           </div>
         </div><br>
