--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -113,9 +113,8 @@
       </div>
       <div class="form-group">
         <div class="row">
-          <!-- {{cpForm}} -->
           <div class="col-md-2">
-            <i class="fa fa-user"></i> &nbsp; <label>Picture</label>
+            <i class="fa  fa-picture-o"></i> &nbsp; <label>Picture</label>
           </div>
           <div class="col-md-4">
             <input type="file" file-model="cpForm.dp">
