--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -17,24 +17,23 @@
     <div class="container-fluid" id="scrollArea{{data.uid}}" style="margin-left:10px;margin-right:10px; height:65vh; overflow-y:auto; overflow-x:hidden;">
 
       <div class="row" style="padding:0px;" ng-repeat="message in data.messages track by $index">
-        {{message.length}}
         <div class="row container-fluid">
-          <div style="float:{{message.sentByMe ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{message.sentByMe ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
-          <p ng-if="message.msg.length>0" style="word-break: break-all !important;" >{{message.msg}}</p>
-           <img ng-if="message.img" ng-src="{{message.img}}" style="width:250px;">
-           <video ng-if="message.video" width="280" height="240" ng-src="{{message.video}}" controls></video>
-           <audio ng-if="message.audio" ng-src="{{message.audio}}" controls></audio>
-           <p class="text-center" ng-if="message.doc" style="word-wrap: break-word;"><a ng-href="{{message.doc}}" target = "_blank" ><i class="fa {{message.doc.split('chat/')[1] | fileTypeIcon }} fa-2x" ></i></a> <br> {{message.doc.split('chat/')[1]}}  </p>
-           <div ng-if="message.link" >
-             <iframe width="100%" height="215" ng-src="{{message.link | trusted}}" frameborder="0" allowfullscreen></iframe>
+          <div style="float:{{message.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{message.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
+          <p ng-if="message.message.length>0 && message.attachmentType!='youtubeLink'" style="word-break: break-all !important;" >{{message.message}}</p>
+           <img ng-if="message.attachmentType == 'image'" ng-src="{{message.attachment}}" style="width:250px;">
+           <video ng-if="message.attachmentType == 'video'" width="280" height="240" ng-src="{{message.attachment}}" controls></video>
+           <audio ng-if="message.attachmentType == 'audio'" ng-src="{{message.attachment}}" controls></audio>
+           <p class="text-center" ng-if="message.attachmentType == 'application'" style="word-wrap: break-word;"><a ng-href="{{message.attachment}}" target = "_blank" ><i class="fa {{message.attachment.split('chat/')[1] | fileTypeIcon }} fa-2x" ></i></a> <br> {{message.attachment.split('chat/')[1]}}  </p>
+           <div ng-if="message.attachmentType == 'youtubeLink'" >
+             <iframe width="100%" height="215" ng-src="{{message.message | trusted}}" frameborder="0" allowfullscreen></iframe>
            </div>
-
           </div>
         </div>
 
-        <div class="row container-fluid" style="{{message.sentByMe ? 'padding-right:30px' : 'padding-left:30px'}};" >
-          <span style="float:{{message.sentByMe ? 'right':'left'}};  font-size:11px; " class="text-muted" >{{message.created | timeAgo}}</span>
+        <div class="row container-fluid" style="{{message.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
+          <span style="float:{{message.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted" >{{message.created | timeAgo}}</span>
         </div>
+
       </div>
 
     </div>
