--- a/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
@@ -65,6 +65,7 @@
         <div class="row text-center">
           <div class="col-md-12" style="font-size:19px">
             <strong>{{adr.title}}</strong>
+              <i class="pull-right fa fa-trash fa-lg" style="cursor:pointer" ng-click="delete($index)"></i>
           </div>
         </div>
         <div class="row">
