--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -40,18 +40,58 @@
     </div>
   </div>
   <div class="row" style="padding-top:15px">
-    <strong style="font-size:15px;padding-left:20px">Payment Methods</strong>
-    <!-- <h4><span style="padding-left:30px"></span>Payment Methods</h4> -->
-    <img src="/static/images/payment-methods.svg" alt="Payment Methods" width="97%">
+    <div class="col-md-12 hidden-sm hidden-xs">
+      <div class="row">
+        <div class="col-md-12">
+          <strong style="font-size:15px;padding-left:20px">Payment Methods</strong>
+        </div>
+      </div>
+      <!-- <h4><span style="padding-left:30px"></span>Payment Methods</h4> -->
+      <div class="row">
+        <div class="col-md-10 hidden-sm hidden-xs">
+          <img src="/static/images/payment-methods.svg" alt="Payment Methods" width="100%;" >
+        </div>
+        <div class="col-md-1 hidden-sm hidden-xs">
+            <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application"   width="100%" style="margin-top: 10px;"></a>
+        </div>
+        <div class="col-md-1 hidden-sm hidden-xs">
+          <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/applestore.png"  alt="iOS Application" ng-href="{{settings.appstoreLink}}"  width="100%" style="margin-top: 10px;"></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
+      <div class="row">
+        <div class="col-md-12">
+          <strong style="font-size:15px;padding-left:0px">Payment Methods</strong>
+        </div>
+      </div>
+      <!-- <h4><span style="padding-left:30px"></span>Payment Methods</h4> -->
+      <div class="row">
+        <div class=" col-xs-12 col-sm-12 hidden-md hidden-lg">
+          <img src="/static/images/payment-methods.svg" alt="Payment Methods" width="100%;" >
+        </div>
+      </div>
+          <div class="row">
+        <div class="col-sm-6 col-xs-6 hidden-md hidden-lg">
+          <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application" ng-href="{{settings.playstoreLink}}"  style="margin-top: 10px;width:20vh;height:5vh"></a>
+        </div>
+        <div class="col-sm-6 col-xs-6 hidden-md hidden-lg">
+          <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/applestore.png" alt="iOS Application" ng-href="{{settings.appstoreLink}}"  style="margin-top: 10px;width:20vh;height:5vh"></a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <div class="container-fluid bg-blue" style="position:relative; width:100%; bottom:0px; padding:20px;">
   <div class="row hidden-xs hidden-sm">
-    <div class="col-md-2 col-md-offset-1" ng-if="settings.playstoreLink.indexOf('http')!=-1 || settings.appstoreLink.indexOf('http')!=-1">
+    <div class="col-md-1">
+    </div>
+
+    <!-- <div class="col-md-2 col-md-offset-1" ng-if="settings.playstoreLink.indexOf('http')!=-1 || settings.appstoreLink.indexOf('http')!=-1">
       <strong>Downloads the apps</strong><br>
       <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/playStore.png" alt="" /> <br> <br></a>
       <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/appStore.png" alt="" /></a>
-    </div>
+    </div> -->
     <div class="col-md-3 {{settings.playstoreLink.indexOf('http')==-1 && settings.appstoreLink.indexOf('http')==-1 ? 'col-md-offset-2 col-md-offset-1' :''}}">
       <img src="/static/images/sterlin_select.png" style="height:7vh;" alt="Logo"><br><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
@@ -66,7 +106,7 @@
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
 
     </div>
-    <div class="col-md-4 text-right">
+    <div class="col-md-3 text-right">
       <div class="row">
         <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;">
           <i class="fa fa-square-o fa-stack-2x"></i>
@@ -85,8 +125,8 @@
         <span>Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
       </div>
       <div class="row">
-        <span  style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
-        <span  style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
+        <span style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
+        <span style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
       </div>
     </div>
   </div>
@@ -137,8 +177,8 @@
         <span style="font-size:12px;">Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
       </div>
       <div class="row">
-        <span  style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
-        <span  style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
+        <span style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
+        <span style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
       </div>
     </div>
 
