--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -5,16 +5,16 @@
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
           <div class="row" class="text-center">
             <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-            <img style="width: 80%; height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
-            <img style="width: 80%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
+            <img style="width: 90%; height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
+            <img style="width: 90%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
           </div>
           </div>
-          <div class="row">
+          <div class="row" >
             <div class=" card bg-white" style="padding-bottom:0px;">
               <div class="row container-fluid" style="padding:10px 20px; ">
-                <h5 ng-if="l.product.name.length>35" style="margin:0px;  height:60px;">{{l.product.name.slice(0,35)}}...</h5>
-                <h5 ng-if="l.product.name.length<=35" style="margin:0px;  height:60px;">{{l.product.name}}</h5>
-                <span style="font-size:15px;"> Price : </span>
+                <h5 ng-if="l.product.name.length>35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
+                <h5 ng-if="l.product.name.length<=35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name}}</h5>
+                <span style="font-size:15px;padding-left:10px"> Price : </span>
 
                 <span style="font-size:15px;">
                   <span ng-if="l.product.discount>0" class="text-muted" >
@@ -42,16 +42,16 @@
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
           <div class="row">
             <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-            <img style="width:50%;height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
-            <img style="width:50%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
+            <img style="width:70%;height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
+            <img style="width:70%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
           </div>
         </div>
           <div class="row">
             <div class=" card bg-white" style="padding-bottom:0px;">
               <div class="row container-fluid" style="padding:10px 20px;">
-                <h5 ng-if="l.product.name.length>35" style="margin:0px; height:50px;">{{l.product.name.slice(0,35)}}...</h5>
-                <h5 ng-if="l.product.name.length<=35" style="margin:0px; height:50px;">{{l.product.name}}</h5>
-                <span style="font-size:15px;"> Price : </span>
+                <h5 ng-if="l.product.name.length>35" style="margin:0px; height:50px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
+                <h5 ng-if="l.product.name.length<=35" style="margin:0px; height:50px;padding-left:10px">{{l.product.name}}</h5>
+                <span style="font-size:15px;padding-left:10px"> Price : </span>
                 <span  style="font-size:15px; ">
                   <span ng-if="l.product.discount>0" class="text-muted" >
                     <strike> <i class="fa fa-inr"></i>{{l.product.price}}</strike>
@@ -89,8 +89,8 @@
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name})">
             <div class="row">
               <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width: 80%;height:200px" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
-              <img style="width: 80%;height:200px" class="img" src="/static/images/ecommerce.jpg" ng-if="g.visual==none">
+              <img style="width: 100%;height:200px" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
+              <img style="width: 100%;height:200px" class="img" src="/static/images/ecommerce.jpg" ng-if="g.visual==none">
             </div>
           </div>
             <div class="row" style="padding-top:5px;">
@@ -110,8 +110,8 @@
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name})">
             <div class="row">
                 <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width:50%;height:280px" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
-              <img style="width:50%;height:280px" class="img" src="/static/images/ecommerce.jpg" ng-if="g.visual==none">
+              <img style="width:100%;height:280px" class="img" ng-src="{{g.visual}}" ng-if="g.visual.length>0">
+              <img style="width:100%;height:280px" class="img" src="/static/images/ecommerce.jpg" ng-if="g.visual==none">
             </div>
           </div>
             <div class="row" style="padding-top:5px; padding-bottom:20px;">
@@ -135,8 +135,8 @@
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
             <div class="row">
                 <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width: 80%; height:200px;" class="img" ng-src="{{r.product.files[0].attachment}}" ng-if="r.product.files.length>0">
-              <img style="width: 80%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.product.files==null">
+              <img style="width: 90%; height:200px;" class="img" ng-src="{{r.product.files[0].attachment}}" ng-if="r.product.files.length>0">
+              <img style="width: 90%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.product.files==null">
             </div>
           </div>
             <div class="row container-fluid" style="padding-top:5px;">
@@ -172,8 +172,8 @@
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
             <div class="row">
                 <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width:50%;height:200px;" class="img" ng-src="{{r.product.files[0].attachment}}" ng-if="r.product.files.length>0">
-              <img style="width:50%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.product.files==null">
+              <img style="width:70%;height:200px;" class="img" ng-src="{{r.product.files[0].attachment}}" ng-if="r.product.files.length>0">
+              <img style="width:70%;height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.product.files==null">
             </div>
             </div>
             <div class="row container-fluid" style="padding-top:5px; padding-bottom:20px;">
@@ -181,7 +181,7 @@
               <h5 ng-if="r.product.product.name.length<=35" style="margin:0px;  height:40px;">{{r.product.product.name}}</h5>
               <span style="font-size:15px;"> Price : </span>
 
-              <span class="pull-right" style="font-size:15px; padding-left:10px; ">
+              <span  style="font-size:15px; padding-left:10px; ">
                 <span ng-if="r.product.product.discount>0" class="text-muted" >
                   <strike><i class="fa fa-inr"></i>{{r.product.product.price}}</strike>
                 </span>
