--- a/support/static/ngTemplates/app.reviews.explore.html
+++ b/support/static/ngTemplates/app.reviews.explore.html
@@ -1,10 +1,10 @@
 <div ng-controller="businessManagement.reviews.explore" style="padding-top:20px;">
-  <div class="col-md-6">
+  <div class="col-md-6" style="border-right:1px solid #eeeeee">
     <h3><strong>Date : </strong>{{msgData[0].created | date : 'dd-MMM-yyyy'}}</h3><hr>
     <div class="row" ng-repeat="msg in msgData">
       <!-- <h3>{{msg.message}}</h3> -->
-      <div style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
-      <p ng-if="msg.message.length>0" style="word-break: break-all !important;" ><h4>{{msg.message}}</h4></p>
+      <div class="row container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#dba4ae; ':'left; background-color:#72b3d4;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
+      <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="word-break: break-all !important;" ><h4>{{msg.message}}</h4></p>
        <img ng-if="msg.attachmentType == 'image'" ng-src="{{msg.file}}" style="width:250px;">
        <video ng-if="msg.attachmentType == 'video'" width="280" height="240" ng-src="{{msg.file}}" controls></video>
        <audio ng-if="msg.attachmentType == 'audio'" ng-src="{{msg.file}}" controls></audio>
@@ -12,30 +12,32 @@
        <div ng-if="msg.attachmentType == 'youtubeLink'" >
          <iframe width="100%" height="215" ng-src="{{msg.message | trusted}}" frameborder="0" allowfullscreen></iframe>
        </div>
-
+      </div>
+      <div class="row container-fluid" style="{{msg.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};" >
+        <span style="clear:both;float:{{msg.sentByAgent ? 'right':'left'}};  font-size:11px; " class="text-muted" >{{msg.created | timeAgo}}</span>
       </div>
     </div>
   </div>
-  <div class="col-md-6">
-      <div class="row" ng-repeat="x in [1,2,3]" style="padding-bottom:15px;" >
-        <div class="col-md-1" >
-          <img src="static/images/avatar.png" style="border-radius:50%; width:30px;" alt="">
-        </div>
-        <div class="col-md-11">
-          <div style="float:left; background-color:#286EFA; color:#fff; border-radius:30px 5px 5px 30px; padding:10px 10px 10px 15px;">
-            <p> @Sai Why did you reply late? </p>
+  <div class="col-md-6" style="padding:20px">
+      <div class="row" ng-repeat="comment in reviewCommentData" style="padding-bottom:15px;" >
+        <div class="col-md-10">
+          <div style="float:right; background-color:#286EFA; color:#fff; border-radius:15px 50px 50px 15px; padding:10px 10px 10px 15px;word-break: break-all !important;">
+            <p> {{comment.message}} </p>
           </div>
+        </div>
+        <div class="col-md-2">
+          <img ng-src="{{comment.user | getDP}}" style="border-radius:50%; width:45px;" alt="User Image">
         </div>
 
       </div>
     <div class="row" style="padding-top:20px;" >
       <div class="col-md-10">
         <div class="form-group">
-         <textarea class="form-control" rows="3" id="comment" placeholder="Comments.." ></textarea>
+         <textarea class="form-control" rows="3" id="comment" placeholder="Comments... " ng-model="reviewForm.message"></textarea>
         </div>
       </div>
-      <div class="col-md-2" style="padding-top:15px;" >
-        <button type="button" class="btn btn-primary" name="button"> Send  </button>
+      <div class="col-md-2" style="padding-top:20px;" >
+        <button type="button" class="btn btn-primary" name="button" ng-click="postComment()"> Send  </button>
       </div>
 
     </div>
