--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -3,14 +3,21 @@
     <div class="container-fluid" style="padding:0px;border-bottom:1px solid #eeeeee;height:80px;">
       <div class="row" style="padding:10px;">
         <div class="col-md-5">
-            <h4 > {{data.uid.split("$")[1]}} </h4>
-            <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i> <span>{{data.uid}}</span>
+            <h4 ng-if="data.name.length>0" >{{data.name}}</h4>
+            <h4 ng-if="data.name.length==0" >{{data.uid}}</h4>
+
+            <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i>
         </div>
         <div class="col-md-5">
            <button class="btn btn-primary" type="button" name="button" ng-click="knowledgeBase()"> Knowledge base </button>
         </div>
-        <div class="col-md-2" >
-          <i class="fa fa-times " aria-hidden="true" style="cursor:pointer; font-size:20px;" ng-click="closeChatBox(index)" ></i>
+        <div class="col-md-2 text-center" >
+          <div class="row">
+            <i class="fa fa-times " aria-hidden="true" style="cursor:pointer; font-size:20px;" ng-click="closeChatBox(index)" ></i>
+          </div>
+          <div class="row" style="padding-top:15px;">
+            <i class="fa fa-pencil fa-lg" style="cursor:pointer;" aria-hidden="true" ng-click="editUserDetails(data.uid)"></i>
+          </div>
         </div>
       </div>
   </div>
