--- a/support/static/ngTemplates/app.reviews.explore.html
+++ b/support/static/ngTemplates/app.reviews.explore.html
@@ -33,7 +33,7 @@
     <div class="row" style="padding-top:20px;" >
       <div class="col-md-10">
         <div class="form-group">
-         <textarea class="form-control" rows="3" id="comment" placeholder="Comments... " ng-model="reviewForm.message"></textarea>
+         <textarea class="form-control" rows="3" id="comment" placeholder="Comments... " ng-model="reviewForm.message" style="resize:none;"></textarea>
         </div>
       </div>
       <div class="col-md-2" style="padding-top:20px;" >
