--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -2,21 +2,20 @@
   <div style="min-height:75vh;margin-top:0px;padding:0px;border-left: 1px solid #eeeeee; border-right: 1px solid #eeeeee; background-color: white; " class="container-fluid">
     <div class="container-fluid" style="padding:0px;border-bottom:1px solid #eeeeee;height:80px;">
       <div class="row" style="padding:10px;">
-        <div class="col-md-5">
-            <h4 ng-if="data.name.length>0" >{{data.name}}</h4>
-            <h4 ng-if="data.name.length==0" >{{data.uid}}</h4>
+        <div class="col-md-6" style="padding-right:0px;" >
 
-            <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i>
+          <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i> <span style="font-size:18px;" >{{data.uid}}</span>
+          <h4>{{data.name}}</h4>
         </div>
-        <div class="col-md-5">
-           <button class="btn btn-primary" type="button" name="button" ng-click="knowledgeBase()"> Knowledge base </button>
+        <div class="col-md-4" style="padding:0px" >
+           <button class="btn btn-primary btn-sm" type="button" name="button" ng-click="knowledgeBase()"> Knowledge base </button>
         </div>
-        <div class="col-md-2 text-center" >
+        <div class="col-md-2 " >
           <div class="row">
-            <i class="fa fa-times " aria-hidden="true" style="cursor:pointer; font-size:20px;" ng-click="closeChatBox(index)" ></i>
+            <i class="fa fa-times pull-right " aria-hidden="true" style="cursor:pointer; font-size:20px; padding-right:15px;" ng-click="closeChatBox(index)" ></i>
           </div>
           <div class="row" style="padding-top:15px;">
-            <i class="fa fa-pencil fa-lg" style="cursor:pointer;" aria-hidden="true" ng-click="editUserDetails(data.uid)"></i>
+            <i class="fa fa-pencil fa-lg  pull-right" style="cursor:pointer; padding-right:15px;" aria-hidden="true" ng-click="editUserDetails(data.uid)"></i>
           </div>
         </div>
       </div>
@@ -45,11 +44,21 @@
 
     </div>
   </div>
+
+  <div ng-if="emojiOpen" class="row" style="width:200px; height:176px; background-color:#eee; position:absolute; top:61vh;left:150px; padding-top:15px; "  >
+    <div style="position:relative" ng-repeat="e in arremoji track by $index">
+      <div class="col-md-1">
+        <span style="cursor:pointer;" ng-click="insertEmoji($index)" >{{e}}</span>
+      </div>
+    </div>
+  </div>
+
   <div class="container-fluid" style="padding:;border-top:30px;background-color:#eeeeee">
     <div class="row" style="margin:0px;margin-top:40px;margin-bottom:60px;">
       <form>
         <div class="input-group">
           <input ng-if="chatBox.fileToSend.size==0" type="text" class="form-control" ng-enter="send()" placeholder="Message" ng-model="chatBox.messageToSend">
+          <span ng-if="chatBox.fileToSend.size==0" class="input-group-addon" ng-click="openEmoji()" style="cursor:pointer"><i class="fa fa-smile-o" aria-hidden="true"></i></span>
           <input type="file" id="filePickerChat{{index}}" style="display:none;" file-model="chatBox.fileToSend">
           <span ng-if="chatBox.fileToSend.size==0" class="input-group-addon"style="cursor:pointer" ng-click="attachFile()" ><i class="fa fa-paperclip"  aria-hidden="true"></i></span>
           <span ng-if="chatBox.fileToSend.size!=0" class="input-group-addon btn btn-default" > <i class="fa {{chatBox.fileToSend.name | fileTypeIcon }}"></i> </span>
