--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -45,20 +45,20 @@
     </div>
   </div>
 
-  <div ng-if="emojiOpen" class="row" style="width:200px; height:176px; background-color:#eee; position:absolute; top:61vh;left:150px; padding-top:15px; "  >
+  <!-- <div ng-if="emojiOpen" class="row" style="width:200px; height:176px; background-color:#eee; position:absolute; top:61vh;left:150px; padding-top:15px; "  >
     <div style="position:relative" ng-repeat="e in arremoji track by $index">
       <div class="col-md-1">
         <span style="cursor:pointer;" ng-click="insertEmoji($index)" >{{e}}</span>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="container-fluid" style="padding:;border-top:30px;background-color:#eeeeee">
     <div class="row" style="margin:0px;margin-top:40px;margin-bottom:60px;">
       <form>
         <div class="input-group">
           <input ng-if="chatBox.fileToSend.size==0" type="text" class="form-control" ng-enter="send()" placeholder="Message" ng-model="chatBox.messageToSend">
-          <span ng-if="chatBox.fileToSend.size==0" class="input-group-addon" ng-click="openEmoji()" style="cursor:pointer"><i class="fa fa-smile-o" aria-hidden="true"></i></span>
+          <!-- <span ng-if="chatBox.fileToSend.size==0" class="input-group-addon" ng-click="openEmoji()" style="cursor:pointer"><i class="fa fa-smile-o" aria-hidden="true"></i></span> -->
           <input type="file" id="filePickerChat{{index}}" style="display:none;" file-model="chatBox.fileToSend">
           <span ng-if="chatBox.fileToSend.size==0" class="input-group-addon"style="cursor:pointer" ng-click="attachFile()" ><i class="fa fa-paperclip"  aria-hidden="true"></i></span>
           <span ng-if="chatBox.fileToSend.size!=0" class="input-group-addon btn btn-default" > <i class="fa {{chatBox.fileToSend.name | fileTypeIcon }}"></i> </span>
