--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -34,6 +34,7 @@
              <iframe width="100%" height="215" ng-src="{{message.message | trusted}}" frameborder="0" allowfullscreen></iframe>
            </div>
           </div>
+
         </div>
 
         <div class="row container-fluid" style="{{message.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
@@ -41,7 +42,7 @@
         </div>
 
       </div>
-
+      <span class="text-muted" ng-show="isTyping">Typing... </span>
     </div>
   </div>
 
